[package]
name = "streamer-indexer"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[dependencies]
actix = "=0.11.0-beta.2"
clap = { version = "3.0.0-beta.5", features = ["color", "derive", "env"] }
futures = "0.3.5"
openssl-probe = { version = "0.1.2" }
tokio = { version = "1.1", features = ["sync", "rt", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
rdkafka = "0.26.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"

near-indexer = { git = "https://github.com/near/nearcore", rev = "1eaa01d6abc76757b2ef50a1a127f98576b750c4" }
